explorer: fix darkmode on firefox
Firefox appears not to propagate click and hover events on disabled
buttons, so this works around it.

--- a/public/scss/navigation.scss
+++ b/public/scss/navigation.scss
@@ -167,6 +167,10 @@ body.darkBG {
     }
   }
 
+  .menu-form:hover .menu-item {
+    color: #2e75ff;
+  }
+
   .menu-submit {
     border: none;
     text-decoration: none;
